--- a/public/jsmith.html
+++ b/public/jsmith.html
@@ -3,26 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="jarrettcsmith.css">
+  <link rel="stylesheet" type="text/css" href="jsmith.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <title>Jarrett C. Smith</title>
+  <title>J. Smith</title>
 </head>
 <body>
 
-  <figure>
-    <fitcaption>
-      <h2><br>Hello world!</br></h2>
-      <h3><br>My name is Jarrett Smith and I am a software developer.</br>
+  <p>
+          <h2><br>Hello world!</br></h2>
+      <h3><br>My name is Jarrett Smith and I am a Software Developer.</br>
         Right now you are looking at my portfolio website.</h3>
-      </fitcaption>
-    </figure>
+    </p>
+
+    <div>
+      <img src="jcsprofile.jpg" alt="profile picture">
+    </div>
+
+
 
 <div>
-    <figure>
-      <img src="jcsprofile.jpg" alt="profile picture">
-    </figure>
-
-
     <ul>
       <li>
         <i class="fa fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/jarrettcsmith"> Add me on LinkedIn</a>
@@ -37,8 +36,18 @@
       </li>
     </ul>
   </div>
-  <div class="contact">
-        <h5>Call me now at 954.111.9999 or emailc at jarrettcsmith@mail.com</h5>
+
+  <div>
+        <p>Call me now at 954.305.9999 or send me an email at jsmith@mail.com</p>
   </div>
+<p>If you prefer to message on a social network then check here:<input type="checkbox" name="" value=""> </p>
+<p>If you checked the box then select which network:
+<select>
+  <option val="">Choose One</option>
+  <option val="1">LinkedIn</option>
+  <option val="2">GitHub</option>
+  <option val="3">Twitter</option>
+</select>
+</p>
   </body>
   </html>
